fixed moon image alignment

--- a/src/styles/_misc.scss
+++ b/src/styles/_misc.scss
@@ -156,6 +156,6 @@
     height: 450px;
 }
 
-.h-300 {
-    height: 300px;
+.h-280 {
+    height: 280px;
 }
